--- a/src/main/webapp/records/edit_patient.html
+++ b/src/main/webapp/records/edit_patient.html
@@ -21,6 +21,7 @@
                 <input class="btn primary" id="edit_customer" type="button" value="Cadastro">
                 <input type="hidden" class="has-pet-system lift:SecuritySnippet.isEbellepetSystem" value="1">
                 <input type="hidden" class="has-medical-system lift:SecuritySnippet.isMedicalSystem" value="1">
+                <input type="hidden" class="has-esmile-system lift:SecuritySnippet.isEsmileSystem" value="1">
                 <input type="hidden" class="has-edoctus-system lift:SecuritySnippet.isEdoctusSystem" value="1">
                 <input type="hidden" class="has-ephysio-system lift:SecuritySnippet.isEphysioSystem" value="1">
                 <input type="hidden" class="has-gerirme-system lift:SecuritySnippet.isGerirmeSystem" value="1">
