--- a/src/main/webapp/templates-hidden/budget.html
+++ b/src/main/webapp/templates-hidden/budget.html
@@ -9,6 +9,15 @@
       <link class="lift:SecuritySnippet.isEgrexSystem" rel="shortcut icon" href="/images/logo_ftr_egrex.ico" type="image/x-icon" />
       <link class="lift:SecuritySnippet.isEphysioSystem" rel="shortcut icon" href="/images/logo_ftr_ephysio.ico" type="image/x-icon" />
       <link class="lift:SecuritySnippet.isEbellepetSystem" rel="shortcut icon" href="/images/logo_ftr_ebellepet.ico" type="image/x-icon" />
+      <!-- falta ebelle pet colocar na ordem e levar para
+      os templates -->
+      <input type="hidden" class="has-medical-system lift:SecuritySnippet.isMedicalSystem" value="1">
+      <input type="hidden" class="has-ebelle-system lift:SecuritySnippet.isEbelleSystem" value="1">
+      <input type="hidden" class="has-esmile-system lift:SecuritySnippet.isEsmileSystem" value="1">
+      <input type="hidden" class="has-edoctus-system lift:SecuritySnippet.isEdoctusSystem" value="1">
+      <input type="hidden" class="has-ephysio-system lift:SecuritySnippet.isEphysioSystem" value="1">
+      <input type="hidden" class="has-gerirme-system lift:SecuritySnippet.isGerirmeSystem" value="1">
+
       <title>Orçamentos</title>
       <!-- Le fav and touch icons -->
       <link rel="shortcut icon" href="/images/icon.ico">
