environment improvements - budget print total

--- a/src/main/webapp/budget/budget.html
+++ b/src/main/webapp/budget/budget.html
@@ -226,7 +226,7 @@
                       </div>
                       <div class="input-prepend" style="float:left; padding-right:10px">
                         <span class="add-on"><img src="/images/user.png" width="16"></span>
-                        <input style="color:black;" class="small disabled" id="totalbudget" name="totalbudget" size="19" placeholder="0.00" type="text" disabled='true'>
+                        <input style="color:black;" class="small disabled value_to_env" data-env-value="TOTAL" data-env-ext="TOTAL_EXT" id="totalbudget" name="totalbudget" size="19" placeholder="0.00" type="text" disabled='true'>
                         <span class="help-block">Total orçamento</span>
                       </div>
                     </div>
