quiz domain question improvements

--- a/src/main/webapp/quiz/list_domainitem.html
+++ b/src/main/webapp/quiz/list_domainitem.html
@@ -33,6 +33,7 @@
 		<thead>
 			<th>Id</th>
 			<th>Nome</th>
+			<th>Exibido</th>
 			<th>Domínio</th>
 			<th>Ordem</th>
 			<th>Ações</th>
@@ -44,6 +45,9 @@
 				</td>
 				<td>
 					<f:name></f:name>
+				</td>
+				<td>
+					<f:valuestr></f:valuestr>
 				</td>
 				<td>
 					<f:quizdomainname></f:quizdomainname>
