--- a/src/main/webapp/quiz_admin/edit_domainitem.html
+++ b/src/main/webapp/quiz_admin/edit_domainitem.html
@@ -45,6 +45,13 @@
             </div>
           </div>
           <div class="clearfix">
+            <label for="valueStr">Val Exibido</label>
+            <div class="input">
+              <input class="medium" id="valueStr" name="valueStr" size="5 " value = "10" type="text"/>
+              <span class="help-block">Valor que será exibido na lista</span>
+            </div>
+          </div>
+          <div class="clearfix">
             <label for="rank" >Pontos</label>
             <div class="input">
               <div class="input-prepend">
