--- a/src/main/webapp/product_admin/edit.html
+++ b/src/main/webapp/product_admin/edit.html
@@ -25,7 +25,7 @@
                     <div class="input-prepend">
                       <input class="medium" id="short_name" name="short_name" size="30" type="text"/>
                       <a data-original-title="Informação" data-content="clique para abrir a documentação" data-help-url='/docs/name.html' rel="popover" class="_popover_basic _help">
-                        <img src="/images/info.gif" width="20">
+                        <img src="/images/info.gif" width="16">
                       </a>
                     </div>
                     <span class="help-block">Nome do produto completo e nome reduzido, este último usado em alguns relatórios</span>
@@ -94,6 +94,13 @@
                 </div>
               </div>
             </div>            
+            <div class="clearfix">
+              <label for="discountToCommission">Desconta tx Comissão?</label>
+              <div class="input">
+                <select name="discountToCommission"></select>
+                <span class="help-block">Se desconta possíveis taxas na comissão deste produto</span>
+              </div>
+            </div>          
           </span>
           <span class='span4'>
               <img id='img_product' alt=""/>
