calendar treatment auditstr

--- a/src/main/webapp/quiz/quiz_applying.html
+++ b/src/main/webapp/quiz/quiz_applying.html
@@ -433,7 +433,7 @@
             <div>
                 <p><b></b></p>
                 <label  style='color:black; font-weight: bold' id='labelleft' style='float:left; padding-right:20px' for="obs">esq fim</label>
-                <div class="input-append">
+                <div class="input-prepend">
                     <span id='labeltop' class="label-top">uai fim</span>
                     <span style='color:black;' class="add-on hide_mobile"></span>
                     <select class="xlarge"></select>
