--- a/src/main/webapp/calendar.html
+++ b/src/main/webapp/calendar.html
@@ -253,6 +253,7 @@
 								<div class="input">
 									<div class="inline-inputs">
 										<textarea name="obs" id="obs_treatment"></textarea>
+										<textarea class="disabled" name="auditstr" id="auditstr_treatment" disabled="true" ></textarea>
 									</div>
 								</div>
 							</div>						         
