--- a/src/main/webapp/budget/budget.html
+++ b/src/main/webapp/budget/budget.html
@@ -168,10 +168,18 @@
                 </div>
               </div>                     
               <div class="clearfix">
+                <label for="terms1">Termos</label>
+                  <div class="input">
+                    <div class="inline-inputs">
+                        <select name="terms1" id="terms1"></select>
+                    </div>
+                  </div>
+              </div>
+              <div class="clearfix">
                 <label for="terms">Termos</label>
                   <div class="input">
                     <div class="inline-inputs">
-                        <select class="local_storage" name="terms" id="terms"></select>
+                        <select name="terms" id="terms"></select>
                     </div>
                   </div>
               </div>
