--- a/src/main/webapp/project/edit_class.html
+++ b/src/main/webapp/project/edit_class.html
@@ -33,6 +33,13 @@
             </div>
           </div>
           <div class="clearfix">
+            <label for="terms">Termos</label>
+            <div class="input">
+              <select id='terms' class="terms" name='terms'></select>
+              <span class="help-block">Tipo de projeto</span>
+            </div>
+          </div>
+          <div class="clearfix">
               <label for="obs">Observação</label>
               <div class="input">
                 <div class="input-prepend">
