--- a/src/main/webapp/user/prof_ranking.html
+++ b/src/main/webapp/user/prof_ranking.html
@@ -11,18 +11,33 @@
     $("#end").val(getDateBr(new Date()));    
     var fields = [];
     fields[0] = "int";
+    fields[1] = {
+      type: "format",
+      decode: function(name, row) {
+        // para envio de email deve aparecer em um decode
+        // tem exemplos de receber um id como parm ai usa push(id) como no birhtdays
+        users.push(row[7]);
+        return "<a href='/user/edit?id=" + row[7] + "' target='_user_maste'>" + name + "</a>";
+      }
+    }
     fields[2] = "int";
     fields[3] = "real";
-    fields[6] = {
-      type : "format",
-      decode : function(idp){
-        users.push(idp);
-        return "<a class='btn' href='/user/edit?id="+idp+"' target='_blank'>Ir</a>"
-      }
-    };    
+    fields[4] = "real";
+    fields[7] = "none";
+    var total = 0.00;
+    var qty = 0.00;
     var url = "/report/prof_ranking";
     var request = function(){
       renderReport(url,fields,$("#form_report").serializeObject(),"#grid",function(data){
+        total = 0.00;
+        qty = 0.00;
+        data.forEach(function(row){
+          total += parseFloat(row[3]);
+          qty += parseFloat(row[2]);
+        });
+        $("#total").val(total.formatMoney());
+        $("#qty").val(qty.formatMoney());
+        $("#ticket").val((total/qty).formatMoney());
         drawChart(jQuery.merge([["Nome","Quantidade","Valor"]],data));
       });
     }
@@ -54,10 +69,14 @@
       google.load("visualization", "1", {packages:["corechart"]});
       function drawChart(data) {
         data = data.map(function(item){
-          item[1]= window.parseInt(item[1])
-          item[2]= window.parseFloat(item[2])
-          return item;
+          var lin = [];
+          lin[0]=item[1]
+          lin[1]= window.parseInt(item[2])
+          lin[2]= window.parseFloat(item[3])
+          lin[3]= window.parseFloat(item[4])
+          return lin;
         })
+        data = jQuery.merge([["Nome","Quantidade","Valor","Ticket Médio"]],data);
         data = google.visualization.arrayToDataTable(data);
         var options = {
           title: 'Ranking de Profissionais',
@@ -114,13 +133,6 @@
               </div>
           </div>
           <div class="clearfix">
-            <label for="maxcli">Limite <span data-i18n='Profissionais'></span></label>
-            <div class="input">
-              <input id = "maxprof" name="maxprof" class="mini" type="number" value = "80"/>
-              <span class="help-block">Quantidade limite de <span data-i18n='Profissionais'></span> no ranking</span>
-            </div>
-          </div>            
-          <div class="clearfix">
             <label for="buscar"></label>
             <div class="input">
               <button type="button" id="send" class="btn success">Buscar</button>
@@ -128,6 +140,13 @@
           </div>
         </div>
         <div class="span7">
+          <div class="clearfix">
+            <label for="maxcli">Limite <span data-i18n='Profissionais'></span></label>
+            <div class="input">
+              <input id = "maxprof" name="maxprof" class="mini" type="number" value = "80"/>
+              <span class="help-block">Quantidade limite de <span data-i18n='Profissionais'></span> no ranking</span>
+            </div>
+          </div>            
           <fieldset>
             <legend>Envio de E-mail</legend>
             <div class="clearfix">
@@ -148,6 +167,30 @@
             </div>
           </fieldset>
         </div>
+        <div class="span13">
+          <div class="clearfix">
+            <label for="start_date">Total </label>
+            <div class="input">
+              <div class="inline-inputs">
+                <div class="lift:SecuritySnippet.isShowSalesToUser input-prepend" style="float:left; padding-right:10px">
+                  <span class="add-on"><img src="/images/money.png" width="16"></span>
+                  <input style="color:black;" class="small disabled" id="total" name="total" size="19" placeholder="0.00" type="text" disabled='true'>
+                  <span class="help-block">Valor Total</span>
+                </div>
+                <div class="input-prepend" style="float:left; padding-right:10px">
+                  <span class="add-on"><img src="/images/user.png" width="16"></span>
+                  <input style="color:black;" class="small disabled" id="qty" name="qty" size="19" placeholder="0.00" type="text" disabled='true'>
+                  <span class="help-block">Quantidade Total</span>
+                </div>
+                <div class="input-prepend" style="float:left; padding-right:10px">
+                  <span class="add-on"><img src="/images/money.png" width="16"></span>
+                  <input style="color:black;" class="small disabled" id="ticket" name="ticket" size="19" placeholder="0.00" type="text" disabled='true'>
+                  <span class="help-block">Ticket Médio</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
    </form>
   <table id="grid" class="bordered-table zebra-striped">
@@ -156,11 +199,11 @@
           <th>Pos</th>
           <th>Nome</th>
           <th>Quantidade</th>
-          <th>Total </th>
+          <th>Total</th>
+          <th>Ticket Médio</th>
           <th>Telefone</th>
           <th>Email</th>
-          <th>ir</th>
-      </tr>
+        </tr>
       </thead>
       <tbody>
       </tbody>
